# TIOE-4317-Empirical-and-Quantitative-Methods-in-Finance

./: .gitignore  pyproject.toml
ex/1/: capm.xlsx  ford.tsv  main.ipynb  main.tex  outputs.tex  utils.py
ex/2/: Dataset_Multiple_Regression.xlsx  main.ipynb  main.tex
ex/3/: main.ipynb  main.tex
ex/4/: TIØ4317_Exercise_4_data.csv  main.tex
ex/5/: brentret.csv  gasolineret.csv  main.ipynb  main.tex
ex/7/: main.ipynb  main.tex
